--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -44,16 +44,13 @@ spec:
               memory: 512Mi
         - name: build-mvn-deploy
           resources: {}
-        - name: check-registry
-          resources: {}
-        - name: build-container-build
-          resources: {}
-        - name: promote-changelog
-          resources: {}
-        - name: promote-helm-release
-          resources: {}
-        - name: promote-jx-promote
-          resources: {}
+          script: |
+            #!/usr/bin/env bash
+            source .jx/variables.sh
+            # modify the pom.xml
+            echo "upgrading the pom to version $VERSION"
+            mvn versions:set -DnewVersion=$VERSION
+            mvn clean install -DskipTests -Dlicense.skip=true
         volumes:
         - name: maven-settings
           secret:
