--- a/pom.xml
+++ b/pom.xml
@@ -588,8 +588,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
+                        <release>11</release>
                         <compilerArgs>
                             <arg>-Xlint:deprecation</arg>
+                            <arg>-Xlint:removal</arg>
                             <arg>-Xlint:unchecked</arg>
                         </compilerArgs>
                         <annotationProcessorPaths>
