--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -17,16 +17,11 @@ spec:
               -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4
               -XX:AdaptiveSizePolicyWeight=90 -Xms10m -Xmx192m
           - name: MAVEN_OPTS
-            value: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=25
-              -Dmaven.wagon.http.retryHandler.count=3
-          - name: HOME
-            value: /tekton/home
-          envFrom:
-          - secretRef:
-              name: jx-boot-job-env-vars
-              optional: true
+            value: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=25 -Dmaven.wagon.http.retryHandler.count=3
+          image: uses:jenkins-x/jx3-pipeline-catalog/tasks/maven-java11/release.yaml@versionStream
           name: ""
           resources:
+            # override limits for all containers here
             limits: {}
           volumeMounts:
           - mountPath: /root/.m2/
@@ -35,44 +30,20 @@ spec:
             name: release-gpg
           workingDir: /workspace/source
         steps:
-        - env:
-          - name: GIT_TOKEN
-            valueFrom:
-              secretKeyRef:
-                key: password
-                name: tekton-git
-          - name: GIT_USER
-            valueFrom:
-              secretKeyRef:
-                key: username
-                name: tekton-git
-          image: ghcr.io/jenkins-x/jx-release-version:2.6.6
-          name: next-version
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@versionStream
+          name: ""
           resources: {}
-          script: |
-            #!/usr/bin/env sh
-            jx-release-version --tag > VERSION
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.70
-          name: jx-variables
+        - name: next-version
+          resources: {}
+        - name: jx-variables
           resources:
-            # set requests for the pod here
+            # override requests for the pod here
             requests:
               cpu: 400m
               memory: 512Mi
-          script: |
-            #!/usr/bin/env sh
-            jx gitops variables
-        - image: maven:3.6-openjdk-11
-          name: build-mvn-deploy
+        - name: build-mvn-deploy
           resources: {}
-          script: |
-            #!/usr/bin/env bash
-            source .jx/variables.sh
 
-            # modify the pom.xml
-            echo "upgrading the pom to version $VERSION"
-            mvn versions:set -DnewVersion=$VERSION
-            mvn clean install -DskipTests -Dlicense.skip=true
         volumes:
         - name: maven-settings
           secret:
