--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -43,7 +43,13 @@ spec:
               memory: 512Mi
         - name: build-mvn-deploy
           resources: {}
-
+          script: |
+            #!/usr/bin/env bash
+            source .jx/variables.sh
+            # modify the pom.xml
+            echo "upgrading the pom to version $VERSION"
+            mvn versions:set -DnewVersion=$VERSION
+            mvn clean install -DskipTests -Dlicense.skip=true
         volumes:
         - name: maven-settings
           secret:
