--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -46,6 +46,9 @@ spec:
           script: |
             #!/usr/bin/env bash
             source .jx/variables.sh
+            git --version
+            sudo apt-get update
+            sudo apt-get install git
             # modify the pom.xml
             echo "upgrading the pom to version $VERSION"
             mvn versions:set -DnewVersion=$VERSION
