--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -47,8 +47,8 @@ spec:
             #!/usr/bin/env bash
             source .jx/variables.sh
             git --version
-            sudo apt-get update
-            sudo apt-get install git
+            apt-get update
+            apt-get install git
             # modify the pom.xml
             echo "upgrading the pom to version $VERSION"
             mvn versions:set -DnewVersion=$VERSION
