--- a/ui-ngx/package.json
+++ b/ui-ngx/package.json
@@ -46,8 +46,8 @@
     "canvas-gauges": "^2.1.7",
     "core-js": "^3.19.2",
     "date-fns": "^2.26.0",
-    "flot": "git://github.com/thingsboard/flot.git#0.9-work",
-    "flot.curvedlines": "git://github.com/MichaelZinsmaier/CurvedLines.git#master",
+    "flot": "https://github.com/thingsboard/flot.git#0.9-work",
+    "flot.curvedlines": "https://github.com/MichaelZinsmaier/CurvedLines.git#master",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.3.3",
     "jquery": "^3.6.0",
