--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -15,9 +15,6 @@ spec:
               storage: 5Gi
           storageClassName: nfs    
   pipelineSpec:
-    workspaces:
-    - name: shared-data
-      optional: false
     tasks:
     - name: from-build-pack
       workspaces:
@@ -44,7 +41,7 @@ spec:
             name: maven-settings
           - mountPath: /root/.gnupg
             name: release-gpg
-          workingDir: /workspace/source/source
+          workingDir: /workspace/source
         steps:
         - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@versionStream
           name: ""
@@ -68,13 +65,9 @@ spec:
             mvn clean install -DskipTests -Dlicense.skip=true -e
         volumes:
         - name: maven-settings
-          persistentVolumeClaim:
-          claimName: my-maven-pvc
           secret:
             secretName: jenkins-maven-settings 
-        - name: release-gpg
-          persistentVolumeClaim:
-          claimName: my-gpg-pvc 
+        - name: release-gpg 
           secret:
             optional: true
             secretName: jenkins-release-gpg   
