--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -15,6 +15,8 @@ spec:
               storage: 5Gi
           storageClassName: nfs    
   pipelineSpec:
+    workspaces:
+    - name: shared-data
     tasks:
     - name: from-build-pack
       workspaces:
