--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -3,7 +3,19 @@ kind: PipelineRun
 metadata:
   creationTimestamp: null
   name: release
-spec:   
+spec:  
+  workspaces:
+    - name: shared-data
+      volumeClaimTemplate:
+        metadata:
+          name: pipelinerun-vol
+        spec:
+          accessModes:
+          - ReadWriteOnce
+          resources:
+            requests:
+              storage: 5Gi
+          storageClassName: nfs   
   pipelineSpec:
     workspaces:
     - name: shared-data
