--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -7,6 +7,8 @@ spec:
   pipelineSpec:
     workspaces:
     - name: shared-data
+      persistentVolumeClaim:
+        claimName: mypvc
     tasks:
     - name: from-build-pack
       workspaces:
@@ -66,17 +68,7 @@ spec:
           secret:
             optional: true
             secretName: jenkins-release-gpg   
-  podTemplate: 
-    volumes:
-    - name: my-pvc
-      persistentVolumeClaim:
-        claimName: my-pvc
-        readOnly: false
-    serviceAccountName: tekton-bot
-    workspaceVolumes:
-    - name: shared-data
-      persistentVolumeClaim:
-        claimName: my-pvc
-        readOnly: false
+  podTemplate: {}
+  serviceAccountName: tekton-bot
   timeout: 12h0m0s
 status: {}
