--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -8,6 +8,7 @@ spec:
   - name: shared-data
     persistentVolumeClaim:
       claimName: my-pvc
+    subPath: my-subdir
   pipelineSpec:
     workspaces:
     - name: shared-data
