--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -42,13 +42,8 @@ spec:
           - name: source
             workspace: shared-data
         steps:
-        - envFrom:
-          - secretRef:
-              name: jx-boot-job-env-vars
-              optional: true
-          image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.27.0
-          name: git-clone
-          resources: {}
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@versionStream
+          name: ""
           script: |
             #!/bin/sh
             export SUBDIR="source"
@@ -56,15 +51,10 @@ spec:
             git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
             git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
             git config --global credential.helper store
-            git clone $REPO_URL $SUBDIR
             cd $SUBDIR
-            git reset --hard $PULL_BASE_SHA
+            git pull
             echo "checked out revision: $PULL_BASE_REF@$PULL_BASE_SHA to dir: $SUBDIR"
-          workingDir: /workspace
-        workspaces:
-        - description: The git repo will be cloned onto the volume backing this workspace
-          mountPath: /workspace
-          name: output
+          resources: {}
         - name: next-version
           resources: {}
         - name: jx-variables
